--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@types/webpack": "^2.2.5",
     "awesome-typescript-loader": "^3.0.4-rc.2",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
+    "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.9.0",
+    "postcss-import": "^9.1.0",
     "postcss-loader": "^1.2.2",
+    "postcss-nested": "^1.0.0",
+    "postcss-nesting": "^2.3.1",
     "postcss-reporter": "^3.0.0",
+    "postcss-url": "^5.1.2",
     "progress-bar-webpack-plugin": "^1.9.3",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
@@ -43,9 +49,11 @@
   },
   "dependencies": {
     "@types/material-design-lite": "^1.1.14",
+    "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "preact": "^7.2.0",
     "preact-mdl": "^2.2.0",
+    "preact-router": "^2.4.1",
     "tslib": "^1.5.0"
   }
 }
